Add feature request #200, bump version.