@@ -12,13 +12,10 @@ import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Objects;
 import java.util.stream.Collectors;
 
 public class TeleportCommand implements CommandExecutor {
     private final Essence plugin;
-    private final LogUtil log;
-    private MessageUtil message;
 
     /**
      * Constructor for the TeleportCommand class.
@@ -26,7 +23,6 @@ public class TeleportCommand implements CommandExecutor {
      */
     public TeleportCommand(Essence plugin) {
         this.plugin = plugin;
-        this.log = new LogUtil(plugin);
     }
 
     /**
@@ -43,7 +39,7 @@ public class TeleportCommand implements CommandExecutor {
         @NotNull String s,
         String[] args
     ) {
-        this.message = new MessageUtil(commandSender, plugin);
+        MessageUtil message = new MessageUtil(commandSender, plugin);
 
         Player player = null;
 
@@ -64,13 +60,15 @@ public class TeleportCommand implements CommandExecutor {
                 return true;
             }
 
+            TeleportUtil tp = new TeleportUtil(this.plugin);
+
             // /tp <selector> <x> <y> <z>
             if (args.length >= 4) {
-                // 权限检查
                 boolean isSelf = false;
-                if (commandSender instanceof Player && (args[0].equalsIgnoreCase("@s") || (args[0].equalsIgnoreCase(((Player)commandSender).getName())))) {
+                if (commandSender instanceof Player && (args[0].equalsIgnoreCase("@s") || (args[0].equalsIgnoreCase(commandSender.getName())))) {
                     isSelf = true;
                 }
+
                 if (isSelf) {
                     if (!permission.has("essence.teleport.coord")) {
                         return permission.not();
@@ -88,7 +86,7 @@ public class TeleportCommand implements CommandExecutor {
                 }
                 double x, y, z;
                 try {
-                    Player ref = (commandSender instanceof Player) ? (Player) commandSender : targets.get(0);
+                    Player ref = (commandSender instanceof Player) ? (Player) commandSender : targets.getFirst();
                     x = args[1].equals("~") ? ref.getLocation().getX() : Double.parseDouble(args[1]);
                     y = args[2].equals("~") ? ref.getLocation().getY() : Double.parseDouble(args[2]);
                     z = args[3].equals("~") ? ref.getLocation().getZ() : Double.parseDouble(args[3]);
@@ -97,15 +95,19 @@ public class TeleportCommand implements CommandExecutor {
                     return true;
                 }
                 for (Player t : targets) {
-                    Location loc = new Location(t.getWorld(), x, y, z);
-                    TeleportUtil tp = new TeleportUtil(this.plugin);
-                    tp.doTeleport(t, loc, 0); // Folia兼容
+
+                    if (!tp.teleportToggleCheck(player, t)) {
+                        message.send("teleport", "requestsdisabled", new String[] { t.getName() });
+                    } else {
+                        Location loc = new Location(t.getWorld(), x, y, z);
+                        tp.doTeleport(t, loc, 0);
+                    }
                 }
                 message.send("teleport", "tocoord", new String[] { x+", "+y+", "+z });
                 return true;
             }
 
-            // /tp <selector1> <selector2>  或 /tp <selector1> <player2>
+            // /tp <selector1> <selector2> or /tp <selector1> <player2>
             if (args.length == 2) {
                 if (!(permission.has("essence.teleport.other") && permission.has("essence.teleport.player"))) {
                     return permission.not();
@@ -116,16 +118,20 @@ public class TeleportCommand implements CommandExecutor {
                     message.send("generic", "playernotfound");
                     return true;
                 }
-                Player to = toList.get(0);
+                Player to = toList.getFirst();
                 for (Player from : fromList) {
-                    TeleportUtil tp = new TeleportUtil(this.plugin);
-                    tp.doTeleport(from, to.getLocation(), 0); // Folia兼容
+
+                    if (!tp.teleportToggleCheck(player, to)) {
+                        message.send("teleport", "requestsdisabled", new String[] { to.getName() });
+                    } else {
+                        tp.doTeleport(from, to.getLocation(), 0); // Folia
+                    }
                 }
                 message.send("teleport", "toplayer", new String[] { fromList.stream().map(Player::getName).collect(Collectors.joining(", ")), to.getName() });
                 return true;
             }
 
-            // /tp <x> <y> <z>  (自己传送到坐标)
+            // /tp <x> <y> <z> (Teleport yourself to the coordinates)
             if (args.length == 3 && player != null) {
                 if (!permission.has("essence.teleport.coord")) {
                     return permission.not();
@@ -140,24 +146,29 @@ public class TeleportCommand implements CommandExecutor {
                     return true;
                 }
                 Location loc = new Location(player.getWorld(), x, y, z);
-                TeleportUtil tp = new TeleportUtil(this.plugin);
                 tp.doTeleport(player, loc, 0); // Folia兼容
                 message.send("teleport", "tocoord", new String[] { x+", "+y+", "+z });
                 return true;
             }
 
-            // /tp <player> 仅玩家传送到玩家
+            // /tp <player> Player to player teleport only
             if (args.length == 1 && player != null) {
                 if (!permission.has("essence.teleport.player")) {
                     return permission.not();
                 }
+
                 List<Player> toList = parseSelector(args[0], commandSender);
                 if (toList.isEmpty()) {
                     message.send("generic", "playernotfound");
                     return true;
                 }
-                Player to = toList.get(0);
-                TeleportUtil tp = new TeleportUtil(this.plugin);
+                Player to = toList.getFirst();
+
+                if (!tp.teleportToggleCheck(player, to)) {
+                    message.send("teleport", "requestsdisabled", new String[] { to.getName() });
+                    return true;
+                }
+
                 tp.doTeleport(player, to.getLocation(), 0);
                 message.send("teleport", "to", new String[] { to.getName() });
                 return true;
@@ -180,22 +191,10 @@ public class TeleportCommand implements CommandExecutor {
     }
 
     /**
-     * Checks if a player is null.
-     * @param player Player - The player to check.
-     * @return boolean - If the player is null.
-     */
-    private boolean isNull(Player player) {
-        if (player == null) {
-            this.message.send("generic", "exception");
-            this.log.severe("Unable to complete teleportation, player is null.");
-            return true;
-        } else {
-            return false;
-        }
-    }
-
-    /**
-     * 解析目标选择器，返回匹配的玩家列表
+     * Parse the target selector and return a list of matching players
+     * @param selector The selector to be parsed
+     * @param sender The command sender.
+     * @return List a list of Player.
      */
     private List<Player> parseSelector(String selector, CommandSender sender) {
         if (selector.equalsIgnoreCase("@s")) {
